[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/MainScenes/SceneHandler.gd" type="Script" id=1]
[ext_resource path="res://Resources/default_theme.theme" type="Theme" id=2]
[ext_resource path="res://assets/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Audio/alexander-nakarada-the-great-battle.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scenes/MainScenes/Map.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Audio/mixkit-sci-fi-click-900.ogg" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.858824, 0.0470588, 0.0470588, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="SceneHandler" type="Node"]
script = ExtResource( 1 )

[node name="PopBox" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 400 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
custom_colors/title_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="PopBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -78.5
margin_right = 116.0
margin_bottom = 78.5
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PopBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -70.0
margin_right = 25.0
margin_bottom = -20.0
rect_min_size = Vector2( 50, 50 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoScreen" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackOverlay" type="ColorRect" parent="InfoScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.0588235, 0.129412, 0.933333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoScreen/BackOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -50.0
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 100 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.992157, 0.992157, 1 )
text = "hhdghdfg"
align = 1
valign = 1
autowrap = true

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="TimerClick" type="Timer" parent="ClickSound"]
wait_time = 0.69
one_shot = true
[connection signal="pressed" from="PopBox/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="ClickSound/TimerClick" to="." method="_on_TimerClick_timeout"]

[editable path="Map"]
